@@ -72,6 +72,10 @@ class Server{
 		Server(SSDB *ssdb);
 		~Server();
 		void proc(ProcJob *job);
+		
+		// TODO: move into Response
+		void int_reply(Response *resp, int num);
+		void bool_reply(Response *resp, int ret, const char *errmsg=NULL);
 
 		// WARN: pipe latency is about 20 us, it is really slow!
 		class ProcWorker : public WorkerPool<ProcWorker, ProcJob>::Worker{
