@@ -197,3 +197,56 @@ KIterator* SSDB::rscan(const Bytes &start, const Bytes &end, uint64_t limit) con
 
 	return new KIterator(this->rev_iterator(key_start, key_end, limit));
 }
+
+int SSDB::setbit(const Bytes &key, int bitoffset, int on, char log_type){
+	if(key.empty()){
+		log_error("empty key!");
+		return 0;
+	}
+	Transaction trans(binlogs);
+	
+	std::string val;
+	int ret = this->get(key, &val);
+	if(ret == -1){
+		return -1;
+	}
+	
+	int len = bitoffset / 8;
+	int bit = bitoffset % 8;
+	if(len >= val.size()){
+		val.resize(len + 1, 0);
+	}
+	int orig = val[len] & (1 << bit);
+	if(on == 1){
+		val[len] |= (1 << bit);
+	}else{
+		val[len] &= ~(1 << bit);
+	}
+
+	std::string buf = encode_kv_key(key);
+	binlogs->Put(buf, val);
+	binlogs->add_log(log_type, BinlogCommand::KSET, buf);
+	leveldb::Status s = binlogs->commit();
+	if(!s.ok()){
+		log_error("set error: %s", s.ToString().c_str());
+		return -1;
+	}
+	return orig;
+}
+
+int SSDB::getbit(const Bytes &key, int bitoffset){
+	std::string val;
+	int ret = this->get(key, &val);
+	if(ret == -1){
+		return -1;
+	}
+	
+	int len = bitoffset / 8;
+	int bit = bitoffset % 8;
+	if(len >= val.size()){
+		return 0;
+	}
+	return val[len] & (1 << bit);
+}
+
+
